# SuBStrAte

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.md  TODO  autogen.sh  configure.ac  dev_guide.md
benchmarks/: HOWTO.md  create_scops_from_source.sh  nb_stmts_benchmarks.py  nb_stmts_plot_graphes.sh  plot_graphes_pluto.sh  pluto_optimization_benchmarks.py  pluto_optimization_plot_graphes.sh  pluto_optimization_plot_graphes_v2.sh  rate2nbstmt.py  run_benchmarks.py  run_benchmarks_nb_stmts.py  run_benchmarks_pluto.py  runtime_benchmarks.py  runtime_benchmarks_plot_graphes.sh  runtime_benchmarks_plot_graphes_v2.sh
benchmarks/files_initial/aggregated_scop_files/: .gitignore
benchmarks/files_initial/scop_files/: 2mm.c.scop  3mm.c.scop  atax.c.scop  bicg.c.scop  cholesky.c.scop  conventional_beamforming.c.scop  correlation.c.scop  covariance.c.scop  deriche.c.scop  doitgen.c.scop  durbin.c.scop  fdtd-2d.c.scop  floyd-warshall.c.scop  gemm.c.scop  gemver.c.scop  gesummv.c.scop  gramschmidt.c.scop  heat-3d.c.scop  jacobi-1d.c.scop  jacobi-2d.c.scop  lu.c.scop  ludcmp.c.scop  mvt.c.scop  nussinov.c.scop  seidel-2d.c.scop  symm.c.scop  syr2k.c.scop  syrk.c.scop  template-for-new-benchmark.c.scop  trisolv.c.scop  trmm.c.scop
benchmarks/files_usefull/optimized_scop/parallelism/0.0/: conventional_beamforming.c
benchmarks/files_usefull/optimized_scop/parallelism/0.1/: gesummv.c.scop
benchmarks/files_usefull/optimized_scop/parallelism/0.2/: conventional_beamforming.c
benchmarks/files_usefull/optimized_scop/parallelism/0.5/: bicg.c.scop  deriche.c
benchmarks/files_usefull/optimized_scop/parallelism/0.6/: correlation.c
benchmarks/files_usefull/optimized_scop/parallelism/0.8/: durbin.c
benchmarks/files_usefull/optimized_scop/parallelism/0.9/: conventional_beamforming.c.scop
benchmarks/files_usefull/optimized_scop/reuse/0.0/: durbin.c
benchmarks/files_usefull/optimized_scop/reuse/0.1/: deriche.c.scop  gesummv.c
benchmarks/files_usefull/optimized_scop/reuse/0.2/: conventional_beamforming.c  conventional_beamforming.c.scop  deriche.c  gesummv.c.scop
benchmarks/files_usefull/optimized_scop/reuse/0.3/: deriche.c  deriche.c.scop  gesummv.c
benchmarks/files_usefull/optimized_scop/reuse/0.4/: conventional_beamforming.c  conventional_beamforming.c.scop  deriche.c.scop
benchmarks/files_usefull/optimized_scop/reuse/0.5/: bicg.c  deriche.c
benchmarks/files_usefull/optimized_scop/reuse/0.6/: correlation.c.scop  deriche.c  deriche.c.scop
benchmarks/files_usefull/optimized_scop/reuse/0.7/: conventional_beamforming.c  conventional_beamforming.c.scop  correlation.c
benchmarks/files_usefull/optimized_scop/reuse/0.8/: correlation.c  correlation.c.scop  gesummv.c.scop
benchmarks/files_usefull/optimized_scop/tiling_hyperplane/0.0/: bicg.c.scop  symm.c
benchmarks/files_usefull/optimized_scop/tiling_hyperplane/0.2/: correlation.c.scop  deriche.c
benchmarks/files_usefull/optimized_scop/tiling_hyperplane/0.4/: covariance.c.scop  deriche.c.scop  durbin.c.scop
benchmarks/files_usefull/optimized_scop/tiling_hyperplane/0.5/: covariance.c
benchmarks/files_usefull/optimized_scop/tiling_hyperplane/0.6/: symm.c.scop
benchmarks/files_usefull/optimized_scop/tiling_hyperplane/0.8/: conventional_beamforming.c.scop
benchmarks/files_usefull/optimized_scop/vectorization/0.0/: bicg.c  gesummv.c  symm.c.scop
benchmarks/files_usefull/optimized_scop/vectorization/0.1/: deriche.c.scop  gesummv.c.scop  symm.c
benchmarks/files_usefull/optimized_scop/vectorization/0.3/: correlation.c.scop
benchmarks/files_usefull/optimized_scop/vectorization/0.5/: correlation.c
benchmarks/files_usefull/pluto_bench/: bicg.c.results
benchmarks/files_usefull/results/nb_stmts/: bicg.c.scop.results  conventional_beamforming.c.scop.results  correlation.c.scop.results  covariance.c.scop.results  deriche.c.scop.results  durbin.c.scop.results  gesummv.c.scop.results
benchmarks/files_usefull/results/pluto/: bicg.c.results  conventional_beamforming.c.results  correlation.c.results  covariance.c.results  deriche.c.results  durbin.c.results  gesummv.c.results  symm.c.results
benchmarks/files_usefull/results/runtime/: bicg.c.results  conventional_beamforming.c.results  correlation.c.results  covariance.c.results  deriche.c.results  durbin.c.results  gesummv.c.results  symm.c.results
benchmarks/files_usefull/scop_files/: bicg.c.scop  conventional_beamforming.c.scop  correlation.c.scop  covariance.c.scop  deriche.c.scop  durbin.c.scop  gesummv.c.scop  symm.c.scop
benchmarks/files_usefull/source_files/: bicg.h  conventional_beamforming.c
doc/: Doxyfile  Makefile.am
include/: analyze.h  optimization.h  options.h  parallelism.h  parallelism_struct.h  reuse.h  reuse_struct.h  statement_profile.h  substrate.h  utils.h  vectorization.h
include/substrate/: adjacency_matrix.h  analyze.h  enum.h  optimization.h  options.h  parallelism.h  parallelism_struct.h  reuse.h  reuse_struct.h  statement_profile.h  tiling_hyperplane.h  tiling_hyperplane_struct.h  utils.h  vectorization.h  vectorization_struct.h
src/: adjacency_matrix.c  analyze.c  optimization.c  options.c  parallelism.c  parallelism_struct.c  reuse.c  reuse_struct.c  statement_profile.c  substrate.c  tags  tiling_hyperplane.c  tiling_hyperplane_struct.c  utils.c  vectorization.c  vectorization_struct.c
tests/: 3mm.c.scop  atax.scop  bicg.c.scop  conventional_beamforming.c.scop  doitgen.c.scop  mvt.c.scop  obvious_group_temporal_reuse.c.scop  one_statement_different_classes.c  one_statement_multiple_access.c
tests/scop_files/: 1-D_hyperbolyc.c.scop  2mm.c.scop  obvious_group_spatial_reuse.c.scop  one_statement_different_classes.c.scop  one_statement_multiple_access.c.scop  parallelism_test.c.scop  simple.c.scop  simple2.c.scop  vectorization1.c.scop  vectorization2.c.scop
tests/source_files/: 1-D_hyperbolyc.c  conventional_beamforming.c  conventional_beamforming.pluto.c  gga_simple.c  obvious_group_spatial_reuse.c  obvious_group_temporal_reuse.c  parallelism_test.c  simple.c  simple2.c  vectorization1.c  vectorization2.c
(+6 files in other folders)
