#
#   /**-------------------------------------------------------------------**
#    **                            SuBStrAte                              **
#    **-------------------------------------------------------------------**
#    **                           Makefile.am                             **
#    **-------------------------------------------------------------------**
#    **                 First version: 05/06/2015                         **
#    **-------------------------------------------------------------------**/


#############################################################################
SUBDIRS 		=

#############################################################################

MAINTAINERCLEANFILES	= Makefile.in

EXTRA_DIST		= htmldoc



DOCDIR			= htmldoc
DOXYFILE		= Doxyfile
DOXYGEN			= @DOXYGEN@


htmldoc:
	mkdir -p $(top_srcdir)/doc/htmldoc
	$(DOXYGEN) $(DOXYFILE)
